--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
+    "dotenv": "^16.3.1",
     "ejs": "^2.6.1",
     "ejs-lint": "^2.0.0",
     "express": "^4.16.3",
